[workspace]
members = [
    "db",
    "graphql"
]

[package]
name = "platform_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.8", features = ["full"] }
poem = "1.0.13"
async-graphql = "2.10.8"
async-graphql-poem = "2.10.8"

log = "0.4.14"
serde_json = "1.0.68"
slab = "0.4.5"
tracing-subscriber = "0.2.24"
dotenv = "*"

graphql = { path = "graphql"}
db = { path = "db"}
anyhow = "1.0.45"