[workspace]
default-members = ["server"]
members = [
    "auth",
    "config",
    "db",
    "graphql",
    "mailers",
    "scripts",
    "scrapers",
    "server",
    "geocodio",
    "votesmart",
    "legiscan",
    "open-fec",
    "open-secrets",
]
resolver = "2"
cargo-features = ["portable_simd"]