[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
db = { path = "../db" }
graphql = { path = "../graphql" }
legiscan = { git = "https://github.com/populist-vote/legiscan" }
votesmart = { git = "https://github.com/populist-vote/votesmart" }
dotenv = "0.15.0"
structopt = "0.3.25"
serde = "*"
serde_json = "1.0.71"
tokio = { version = "1.8", features = ["full"] }
sqlx = { version = "0.5.9", features = ["postgres"] }
async-graphql = { version = "3.0.10" }
slugify = "0.1.0"
colored = "2.0.0"
csv = "1.1"
uuid = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.45"
strum = "0.23.0"
strum_macros = "0.23.0"
serde_yaml = "0.8.23"
rand = "*"