[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
legiscan = { path = "../legiscan", features = ["async-graphql"] }
votesmart = { path = "../votesmart" }
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5.9", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "offline" ] }
tokio = { version = "1.8", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "*"
serde = "1.0.130"
async-graphql = { version = "3.0.10", features = ["chrono"] }
dotenv = "*"
anyhow = "1.0.45"
strum = "0.22.0"
strum_macros = "0.22.0"
slugify = "0.1.0"
const_format = "0.2.22"
serde_json = "1.0.69"
pwhash = "1.0.0"
thiserror = "1.0.30"
once_cell = "1.8.0"
