[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
geocodio = { path = "../geocodio" }
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "offline",
] }
legiscan = { path = "../legiscan" }
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde = "1.0.130"
serde_with = { version = "2.0.1", features = ["json"] }
async-graphql = { version = "6.0.7", features = [
    "chrono",
    "uuid",
    "dataloader",
] }
dotenv = "*"
strum = "0.22.0"
strum_macros = "0.22.0"
slugify = "0.1.0"
serde_json = "1.0.71"
pwhash = "1.0.0"
thiserror = "1.0.30"
once_cell = "1.8.0"
itertools = "*"

rand = "0.8.5"
tracing = "*"
