[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.45"
async-graphql = { version = "3.0.10", features = ["uuid", "chrono", "unblock", "dataloader", "apollo_persisted_queries"] }
async-graphql-poem = "3.0.18"
bytes = "1.1.0"
chrono = "0.4.19"
auth = { path = "../auth" }
db = { path = "../db" }
mailers = { path = "../mailers" }
tokio = { version = "1.8", features = ["full"] }
legiscan = { git = "https://github.com/populist-vote/legiscan", features = ["async-graphql"] }
votesmart = { git = "https://github.com/populist-vote/votesmart", features = ["async-graphql"] }
dotenv = "0.15.0"
pwhash = "1.0.0"
rust-s3 = "0.28.0"
serde = "1.0.130"
serde_json = "1.0.71"
sqlx = { version = "0.5.9", features = ["postgres"] }
thiserror = "1.0.30"
uuid = "0.8.2"
http = "0.2.5"
base64 = "0.13.0"
async-trait = "0.1.52"
jsonwebtoken = "7.2.0"
poem = { version = "1.2.59" }
zxcvbn = { version = "2.2.1", features = ["ser"] }