[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
auth = { path = "../auth" }
config = { path = "../config" }
db = { path = "../db" }
mailers = { path = "../mailers" }
open-secrets = { path = "../open-secrets" }

anyhow = "1.0.45"
async-graphql = { version = "5.0.5", features = ["uuid", "chrono", "unblock", "dataloader", "tracing"] }
async-graphql-axum = "5.0.5"
async-openai = "0.10.3"
bytes = "1.1.0"
chrono = "0.4.19"
tokio = { version = "1.21.1", features = ["full"] }
legiscan = { path = "../legiscan", features = ["async-graphql"] }
votesmart = { path = "../votesmart", features = ["async-graphql"] }
geocodio = { path = "../geocodio" }
dotenv = "0.15.0"
pwhash = "1.0.0"
rust-s3 = "0.28.0"
serde = "1.0.130"
serde_json = "1.0.71"
sqlx = { version = "0.6.2", features = ["postgres", "bigdecimal", "uuid"] }
thiserror = "1.0.30"
uuid = "1.1.2"
http = "0.2.5"
base64 = "0.13.0"
async-trait = "0.1.52"
jsonwebtoken = "7.2.0"
zxcvbn = { version = "2.2.1", features = ["ser"] }
url = "2.2.2"
tracing = "0.1.35"
tokio-stream = "*"
strum_macros = "0.24.3"
strum = "0.24.1"
