[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
auth = { path = "../auth" }
config = { path = "../config" }
db = { path = "../db" }
mailers = { path = "../mailers" }
open-secrets = { path = "../open-secrets" }
async-graphql = { version = "7.0.3", features = [
    "uuid",
    "chrono",
    "unblock",
    "dataloader",
    "tracing",
] }
async-openai = "0.10.3"
chrono = "0.4.19"
tokio = { version = "1.21.1", features = ["full"] }
legiscan = { path = "../legiscan", features = ["async-graphql"] }
votesmart = { path = "../votesmart", features = ["async-graphql"] }
geocodio = { path = "../geocodio" }
dotenv = "0.15.0"
pwhash = "1.0.0"
rust-s3 = "0.33.0"
serde = "1.0.130"
serde_json = "1.0.71"
sqlx = { version = "0.7", features = ["postgres", "bigdecimal", "uuid"] }
thiserror = "1.0.30"
uuid = "1.1.2"
http = "0.2.5"
base64 = "0.13.0"
jsonwebtoken = "7.2.0"
zxcvbn = { version = "2.2.1", features = ["ser"] }
url = "2.2.2"
tracing = "0.1.35"
tokio-stream = "*"
csv = "1.3.0"
regex = "1.10.6"
kmeans = "1.1.0"
ndarray = "0.16.1"
itertools = "0.13.0"
anyhow = "1.0.93"
futures = "0.3.31"
rand = "0.8.5"
