[package]
name = "legiscan"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
enum-utils = "0.1.2"
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.71"
structopt = "0.3.25"
strum_macros = "0.23.1"
thiserror = "1.0.30"
tokio = { version = "1.8", features = ["full"] }
sqlx = { version = "0.5.9", features = ["postgres", "offline", "runtime-tokio-rustls"] }
async-graphql = { version = "3.0.10", features = ["uuid", "chrono", "unblock"] }
chrono = "0.4.19"