[package]
name = "legiscan"
authors = ["Wiley McKay Conte <wiley@populist.us>"]
description = "A client wrapper for the Legiscan REST API"
license = "MIT/Apache-2.0"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/populist-vote/legiscan"
documentation = "https://docs.rs/legiscan"
repository = "https://github.com/populist-vote/legiscan"
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
thiserror = "1.0.30"
tokio = { version = "1.8", features = ["full"] }
num_enum = "0.5.5"
strum_macros = "0.23.1"
async-graphql = { version = "3.0.10", optional = true }