[package]
name = "open-fec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
spinners = "4.1.1"
tokio = { version = "1.21.1", features = ["full"] }
