[package]
name = "scrapers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
chrono = "0"
csv = "1"
project-root = "0"
regex = "1"
reqwest = "0"
scraper = "0"
slugify = "0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0", features = ["postgres", "macros"] }
thirtyfour = "0"
tokio = { version = "1", features = ["full"] }
spinoff = { version = "0", features = [ "arc"] }
calamine = "0"
tracing = "0.1.40"

