[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../auth" }
db = { path = "../db" }
server = { path = "../server" }
open-fec = { path = "../open-fec" }
votesmart = { path = "../votesmart" }
legiscan = { path = "../legiscan" }
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.71"
tokio = { version = "1.21.1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "uuid"] }
colored = "2.0.0"
csv = "1.3.0"
uuid = "1.1.2"
chrono = { version = "0.4.22", features = ["serde"] }
spinners = "4.1.0"
reqwest = "0.11.22"
tracing = "0.1.40"
clap = { version = "4.4.14", features = ["derive"] }
base64 = "0.21.6"
zip = "0.6.6"
slugify = "0.1.0"
async-openai = "0.19.0"
tracing-subscriber = "0.3.11"
indicatif = "0.17.8"
