[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "server"

[dependencies]
auth = { path = "../auth" }
config = { path = "../config" }
db = { path = "../db" }
graphql = { path = "../graphql" }
legiscan = { path = "../legiscan" }
scrapers = { path = "../scrapers" }
tokio = { version = "1.21.1", features = ["full"] }
async-graphql = { version = "7.0.3", features = ["apollo_tracing"] }
serde_json = "1.0.68"
jsonwebtoken = "7.2.0"
time = "0.3.25"
dotenv = "*"
anyhow = "1.0.45"
sqlx = { version = "0.7", features = ["postgres"] }
thiserror = "1.0.30"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
axum = { version = "0.7.4", features = ["ws", "macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
async-graphql-axum = "7.0.3"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-cookies = { version = "0.10.0" }
http = "0.2.8"
reqwest = { version = "0.11.13", features = ["cookies"] }
pretty_assertions = "1.3.0"
tokio-cron-scheduler = "0.9.4"
tokio-util = "0.7.10"
serde = "1.0.193"
strum_macros = "0.25.3"
strum = "0.25.0"
csv = "1.3.0"
uuid = "1.7.0"
