[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "server"

[dependencies]
auth = { path = "../auth" }
config = { path = "../config" }
db = { path = "../db" }
graphql = { path = "../graphql" }
legiscan = { path = "../legiscan" }
scrapers = { path = "../scrapers" }
tokio = { version = "1.21.1", features = ["full"] }
async-graphql = { version = "7.0.3", features = ["apollo_tracing"] }
serde_json = "1.0.68"
jsonwebtoken = "7.2.0"
time = "0.3.36"
dotenv = "*"
anyhow = "1.0.45"
sqlx = { version = "0.8.3", features = ["postgres"] }
thiserror = "1.0.30"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
axum = { version = "0.7.4", features = ["ws", "macros"] }
async-graphql-axum = "7.0.3"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-cookies = { version = "0.10.0" }
http = "0.2.8"
tokio-cron-scheduler = "0.9.4"
uuid = "1.7.0"
regex = "1.10.6"
reqwest = "0.12.7"
slugify = "0.1.0"
clap = "4.5.31"
base64 = "0.22.1"
colored = "3.0.0"
zip = "2.2.2"
chrono = "0.4.39"
prometheus = "0.13.4"
axum-prometheus = "0.8.0"
lazy_static = "1.5.0"
async-trait = "0.1.88"
