[package]
name = "votesmart"
description = "A client wrapper for the Votesmart REST API"
license = "MIT/Apache-2.0"
version = "0.1.2"
edition = "2021"
documentation = "https://docs.rs/votesmart"

[dependencies]
dotenv = "0.15.0"
enum-utils = "0.1.2"
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.71"
thiserror = "1.0.30"
tokio = { version = "1.8", features = ["full"] }
async-graphql = { version = "3.0.10", features = ["uuid", "chrono", "unblock"] }
chrono = "0.4.19"